--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,25 +4,30 @@
       <meta charset="UTF-8" />
       <title>Mini URL</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-      <link rel="stylesheet" href="static/style.css">
+      <link rel="stylesheet" href="static/css/style.css">
     </head>
     <body>
-      <div class="row">
+      <div id="main" class="row">
         <h1>Mini url</h1>
         <p>URL minification service</p>
         <div class="col-md-4 col-md-offset-4">
         {% from "forms/macros.html" import render_field %}
           <form action="/" method="POST">
-            {{ form.csrf_token }}
-            {{ render_field(form.url, class="input text", placeholder="url") }}
-            <input class="btn btn-success" type="submit" value="Go!"/>
+	    <div class="input-group">
+              {{ form.csrf_token }}
+              {{ render_field(form.url, class="form-control", placeholder="url") }}
+	      <span class="input-group-btn">
+                <input class="btn btn-success" type="submit" value="Go!"/>
+	      </span>
+	    </div>
           </form>
         <a id="result" href="{{ result }}" target="_blank">{{ result }}</a>
         </div>
         <div class="col-md-4">
-          <h4>Recent links</h4>
+          
           <ul>
-            {% for link in links %}
+	    <li><h4>10 Most recent links</h4></li>
+            {% for link in links[:-10:-1] %}
             <li><a href="{{ home }}/{{ link }}" target="_blank">{{ home }}/{{ link }}</a></li>
             {% endfor %}
           </ul>
