--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,38 +1,64 @@
 body {
   background: url(../img/night-trees-stars.jpg) no-repeat;
-  background-size: 100%;
+  background-size: cover;
   color: #eee;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
 p {
   text-align: center;
 }
+
+ul {
+  display: block;
+  margin: auto;
+  padding: 20px 0 ;
+  list-style-type: none;
+  background: rgba(0,0,0,0.5);
+  border-radius: 5px;
+}
+
+li a,
+li h4 {
+  color: blue;
+  text-align: center;
+}
+
+li h4 {
+  color: #eee;
+}
+
+#url,
 .btn,
-input,
 a {
   display: block;
   margin: auto;
 }
+
+form {
+  margin: 0 5%;
+}
+
+#url {
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
 #result {
   font-size: 20px;
   margin-top: 10px;
-  background-color: rgba(0,0,0,0.7);
-  border-radius: 3px;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 5px;
   border-color: 1px black;
   text-align: center;
 }
-ul {
-  list-style-type: none;
-}
-li a,
-li h4 {
-  color: blue;
-  text-align: left;
-}
-li h4 {
-  color: #eee;
-}
+
 #main {
-  padding-top: 100px;
+  padding: 100px 0;
+}
+
+#recent {
+	padding-bottom: 50px;
 }
