--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,27 +11,33 @@
         <h1>Mini url</h1>
         <p>URL minification service</p>
         <div class="col-md-4 col-md-offset-4">
-        {% from "forms/macros.html" import render_field %}
+          {% from "forms/macros.html" import render_field %}
           <form action="/" method="POST">
-	    <div class="input-group">
+            <div class="input-group">
               {{ form.csrf_token }}
               {{ render_field(form.url, class="form-control", placeholder="url") }}
-	      <span class="input-group-btn">
+              <span class="input-group-btn">
                 <input class="btn btn-success" type="submit" value="Go!"/>
-	      </span>
-	    </div>
+              </span>
+            </div>
           </form>
-        <a id="result" href="{{ result }}" target="_blank">{{ result }}</a>
+          <a id="result" href="{{ result }}" target="_blank">{{ result }}</a>
         </div>
-        <div class="col-md-4">
-          
+      </div>
+      <div id="recent"class="row">  
+        <div class="col-md-4 col-md-offset-4">
           <ul>
-	    <li><h4>10 Most recent links</h4></li>
+            <li>
+              <h4>See what people are minifying!</h4>
+            </li>
             {% for link in links[:-10:-1] %}
-            <li><a href="{{ home }}/{{ link }}" target="_blank">{{ home }}/{{ link }}</a></li>
+            <li>
+              <a href="{{ home }}/{{ link }}" target="_blank">{{ home }}/{{ link }}</a>
+            </li>
             {% endfor %}
           </ul>
         </div>
       </div>
+      <a href="https://github.com/Nudies/mini-url"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
     </body>
 </html>
