Cleaned some code, fixed missing return

--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -24,6 +24,7 @@
       </style>
     </head>
     <body>
+      <a href="/">Back</a>
       <div class="row">
         <div class="col-md-4">
           <h3>Usage over time</h3>
